Fix button alignment in Chrome

--- a/style.css
+++ b/style.css
@@ -570,8 +570,7 @@ h1::after {
 .popup-button-container {
     display: flex;    
     height: 100%;
-    justify-content: right;
-    align-content: flex-end;    
+    justify-content: flex-end;        
 }
 
 .popup-button-container button {
@@ -627,8 +626,8 @@ h1::after {
     .popup-button-container {
         display: flex;    
         height: unset;
-        justify-content: right;
-        align-content: flex-end;
+        justify-content: flex-end;
+        /* align-content: flex-end; */
         margin-top: 15px;    
     }
 
